# motif-quantification

./: .gitignore  ROADMAP.md  centroid-mzml.py  execution.xsh  fasta-updater.py  index-distributions.py  index-motifs.py  pride-download.py  quantify.py  reorganize-results.py  validate-centroid-mzml
detector-rs/: Cargo.toml  README.md
detector-rs/src/: config.rs  distributions.rs  lib.rs  linemodel.rs  main.rs  peaks.rs  store.rs
distributions/: PIPELINE_FAITHFULNESS.md  envelope.py  index_ms1.py  inspect_distributions.py  peaks.py  store.py
distributions/tools/: make_synth_mzml.py
examples/: panel-3-plot.py  sequencecoverageconcept.py
motif-indexing/: Cargo.toml  motif-tutorial.py
motif-indexing/src/: main.rs
tests/motif-positions/: motif-positional-bias  reverse-fasta
tests/quantify-motifs/: build-and-check
viewer/: ARCHITECTURE.md  PLAN.md  app.py  chemistry.py  coverage.py  de_stats.py  distributions_db.py  experimental.py  fragments.py  isotopes.py  main_window.py  motif_quant_model.py  motif_tab.py  motifs.py  ms_viewer_tab.py  mzml_store.py  plots.py  points_store.py  proteins_tab.py  quant_model.py  quant_tab.py  region_view.py  session.py  theming.py  views.py  workspace.py
